--- a/doc/fr_FR/migration.asciidoc
+++ b/doc/fr_FR/migration.asciidoc
@@ -9,9 +9,9 @@ image::./images/plugnmobilesanshb.png[]
 
 Homebridge est complètement déssolidarisée du plugin mobile. Il fonctionne maintenant de manière autonome.
 
-Lors de l'installation du plugin homebridge, tous vos accéssoires vont être indisponibles. C'est normal.
+Lors de l'installation du plugin homebridge, tous les accéssoires vont être indisponibles. C'est normal.
 
 image::./images/migration1.png[]
 
-
+Dès que l'installation des dépendances est terminée, tous les accessoires reviendront.
 
