--- a/doc/fr_FR/installationPluginHB.asciidoc
+++ b/doc/fr_FR/installationPluginHB.asciidoc
@@ -54,8 +54,8 @@ Ces fichiers peuvent être necessaires en cas de disfonctionenement du plugin.
 
 image::../images/log.png[]
 
-* Homebridge : Historise toutes les communications avec le demon homebridge.
+* Homebridge : Historise toutes les communications avec le démon homebridge.
 
 * Homebridge_daemon : Historise les actions effectuées par homebridge (par exemple si un accessoire est envoyé à homebridge mais n'apparait pas dans l'application domicile, c'est ici qu'il faut aller voir).
 
-* Homebridge_dep : Historise toutes les étapes de l'installation des dépendances. Si le demon refuse de démarrer par exemple, un coup d'oeil peut aider).
+* Homebridge_dep : Historise toutes les étapes de l'installation des dépendances. Si le démon refuse de démarrer par exemple, un coup d'oeil peut aider).
