--- a/doc/fr_FR/installationPluginHB.asciidoc
+++ b/doc/fr_FR/installationPluginHB.asciidoc
@@ -1,8 +1,8 @@
 == Installation et activation du plugin Homebridge
 
-Le plugin Homebridge doit être installé via le market Jeedom. *Le plugin mobile officiel n'est plus indispensable.*
+Le plugin Homebridge doit être installé via le market Jeedom. *Le plugin App Mobile officiel n'est plus indispensable.*
 
-*Pour les migrations depuis le plugin mobile officiel, il est important de ne pas désactiver le plugin mobile. Une rubrique "Migration depuis le plugin mobile" est disponible dans la documentation.* 
+*Pour les migrations depuis le plugin App Mobile officiel, il est important de ne pas désactiver le plugin App Mobile. Une rubrique "Migration depuis le plugin App Mobile" est disponible dans la documentation.* 
 
 image::../images/pluginHB.png[]
 
