--- a/doc/fr_FR/TroubleshootingHomebridge.asciidoc
+++ b/doc/fr_FR/TroubleshootingHomebridge.asciidoc
@@ -18,7 +18,7 @@ image::../images/dependances-homebridge.png[]
 
 *-> Mon équipement n'apparait pas dans Homebridge !*
 
-TIP: Vérifiez que la case "Envoyer à Homebridge" est cochée dans la configuration du plugin App Mobile.
+TIP: Vérifiez que la case "Envoyer à Homebridge" est cochée dans la configuration du plugin Homebridge.
 
 *-> La case "Envoyer à Homebridge" est bien cochée mais mon équipement n'apparait toujours pas !*
 
